# file2vector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: npm-publish.yml
src/: lib.rs
