[package]
name = "file2vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
calamine = "0.25.0"
wasm-bindgen = {version="0.2.92"}
gloo-utils = { version = "0.1", features = ["serde"] }
